# AI_Lab_Studio

./: CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Procfile  README.md  VERIFICATION.md  app.py  pyproject.toml  requirements.txt  run.bat  run.sh  streamlit.toml  streamlit_app.py
pages/: 1_Data_Hub.py  2_ML_Training.py  3_Prediction.py  4_Project_Management.py
utils/: data_processor.py  helpers.py  ml_models.py  visualizations.py
